--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -4,13 +4,13 @@
 
 @layer components {
   .input-base {
-    @apply relative w-full bg-white border border-lime-200 text-lime-900 rounded-lg focus:ring-lime-500 focus:border-lime-500 block p-2  dark:bg-lime-700 dark:border-lime-600 dark:placeholder-lime-400 dark:text-white dark:focus:ring-lime-500 dark:focus:border-lime-500 h-10
+    @apply relative w-full bg-white border border-lime-200 text-lime-900 rounded-lg focus:ring-lime-500 focus:border-lime-500 block p-2  dark:bg-lime-700 dark:border-lime-600 dark:placeholder-lime-400 dark:text-white dark:focus:ring-lime-500 dark:focus:border-lime-500 h-12 text-lg
   }
   .button-base {
     @apply justify-center rounded-lg border border-transparent bg-lime-700 px-4 py-2 text-white shadow-sm hover:bg-lime-600
   }
   .text-button {
-    @apply inline-flex items-center rounded-lg bg-lime-700 hover:bg-lime-500 disabled:bg-lime-400 px-3 py-2 text-base font-medium text-white hover:text-opacity-100 focus:outline-none focus-visible:ring-2 focus-visible:ring-white focus-visible:ring-opacity-75
+    @apply inline-flex items-center rounded-lg bg-lime-700 hover:bg-lime-500 disabled:bg-lime-400 px-3 py-2 text-lg font-medium text-white hover:text-opacity-100 focus:outline-none focus-visible:ring-2 focus-visible:ring-white focus-visible:ring-opacity-75
   }
   .text-button-icon {
     @apply h-5 w-5 text-lime-100 transition duration-150 ease-in-out group-hover:text-opacity-80
